# IntermediateCalculator

./: CMakeLists.txt  CNA  README.md  complex_number_arithmetics.cpp
doc/: compilationGuide.txt
include/: complex_arith.hpp  matrices_operation.hpp  vector_algebra.hpp
myvenv/: pyvenv.cfg
src/: Vector_algebra.cpp  complex_number_arithmetics.cpp  complex_number_arithmetics.h  complex_parser.cpp  main.cpp  matrices_operation.cpp  matrices_operation.h  testrun
src/python_parser/: complex_parser.py  complex_parser.spec
